# Action-Semver-Control

./: .gitignore  .pre-commit-config.yaml  .wtp.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  action.yml  auto_semver_config.yml  devfile.yaml  install-task.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/app-authentication/: action.yml
.github/actions/gh-release/: action.yml
.github/copilot/instructions/: commit.instructions.md  copilot-instructions.md  python.instructions.md
.github/copilot/prompts/: commit.prompt.md  create-pr.prompt.md  improve-code.prompt.md  instruction-improvement.prompt.md  new-branch.prompt.md  tests-advanced.prompt.md  tests.prompt.md  update-pr.prompt.md  validate.prompt.md
.github/prompts/: .prompt.md  Untitled-1.prompt.md
.github/workflows/: auto-semver.yml  ci.yml  promote.yml  publish-production.yml  publish-release.yml  publish-staging.yml  test.yml
src/: actionops.py  changelog.py  config.py  gitops.py  logger.py  main.py  semver_lock.py  version.py  version_updater.py  versioning.py
src/auto_semver/: __init__.py
src/auto_semver.egg-info/: PKG-INFO  SOURCES.txt
src/auto_semver/changelog/: __init__.py  manager.py
src/auto_semver/cli/: __main__.py  bump.py  finalize.py  main.py  promote.py  utils.py
src/auto_semver/config/: __init__.py  config.py  constants.py  data.py  loader.py
src/auto_semver/config/_models/: __init__.py  _changelog.py  _commit_group.py  _config.py  _promotion.py  _pull_request.py
src/auto_semver/gh/: __init__.py  event.py
src/auto_semver/git/: __init__.py  grouper.py  ops.py  parser.py
src/auto_semver/pr/: builder.py  github_builder.py
src/auto_semver/semver/: __init__.py  lock.py  updater.py  version.py
src/auto_semver/templates/: __init__.py  engine.py  types.py  utils.py
src/auto_semver/utils/: logger.py
src/changelog/: write.py
src/fileops/: update.py
src/gitops/: pr.py  push.py
src/utils/: git.py  logger.py
src/versioning/: __init__.py  bump.py  constants.py  extract.py
tests/: __init__.py  conftest.py  test_changelog_write.py  test_docker.py  test_fileops_update.py  test_gitops_pr.py  test_gitops_push.py  test_improvements.py  test_main_run.py  test_utils_logger.py  test_versioning_bump.py  test_versioning_extract.py
tests/assets/: .semver.lock.j2  auto_semver_config.yml.j2  event.json.j2
tests/auto_semver/: __init__.py
tests/auto_semver/changelog/: __init__.py  test_manager.py  test_manager_engine_integration.py
tests/auto_semver/cli/: test_bump.py  test_bump_promotion.py  test_finalize.py  test_main.py  test_utils.py
tests/auto_semver/config/: test_commit_group_parsing.py  test_data.py  test_loader.py  test_models_template_registration.py
tests/auto_semver/gh/: __init__.py  test_event.py
tests/auto_semver/git/: test_ops.py  test_ops_parsing.py  test_ops_push_failure.py  test_ops_release_filtering.py  test_parser.py
tests/auto_semver/semver/: __init__.py  test_lock.py  test_updater.py  test_version.py
tests/auto_semver/templates/: __init__.py  test_engine.py
tests/auto_semver/utils/: test_commit_bullet_extraction.py  test_commit_grouper.py  test_logger.py
tests/cli/: scenarios.py  test_config_validation.py  test_promote.py
tests/fixtures/: __init__.py  changelog_fixture.py  config_fixture.py  env_isolation_fixture.py  file_fixture.py  git_repo_fixture.py  github_api_mock_fixture.py  github_event_fixture.py  network_block_fixture.py  test_file_fixture.py
tests/helpers/: fake_repo_scenerio.py
tests/integration/: test_action_integration.py  test_auto_promotion.py  test_e2e_workflows.py  test_full_e2e.py
tests/mocks/: config_mocks.py
tests/pr/: test_github_builder.py  test_github_builder_functions.py
tests/utils/: github_event.py
