[build-system]
requires = ["setuptools>=80.4"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_semver"
version = "0.1.0"
description = ""
authors = [{ name = "Guy Erreich", email = "gerreich.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion  = "6.0"
# addopts     = "-ra -q --cov=src --cov-report=term-missing"
pythonpath  = "src"
testpaths   = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_level = "DEBUG"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "edge_case: mark a test as an edge case test",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (PEP8)
  "F",    # pyflakes
  "N",    # pep8-naming
  "D",    # pydocstyle
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # bugbear
  "RUF",  # ruff-specific rules
  "PL",   # pylint
]
ignore = [
  "D202",     # No blank lines after function docstring
  "D211",     # 1 blank line required before class docstring
  "D212",     # Multi-line docstring summary should start at the first line
  "D104",     # Missing docstring in public module
  "PLR0913",  # Too many arguments
]


[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
strict = true
install_types = true
plugins = []
